# SMIED

./: .gitignore  BFS_Semantic_Decomposition.ipynb  BeamSemantic_Decomposition.ipynb  DELIVERABLES_SUMMARY.md  Experiments.ipynb  FrameNetSpaCySRL.ipynb  Graphbrain_parser_tests.ipynb  Hypergraphx_Tests.ipynb  NL2AMR2FRED_Tests.ipynb  NoSKE_Pipeline_Test_Notebook.ipynb  NoSKE_Pipeline_Tests.ipynb  OpenCog_AtomSpace_Tests.ipynb  PROMPTS.md  README.md  SEMANTIC_PATHFINDING_ANALYSIS_REPORT.md  SMIED_Test_Notebook.ipynb  SRL.md  TODO.md  diagnostic_tools.py  focused_analysis.py  pyproject.toml  quick_analysis.py  validate_findings.py
.claude/: settings.local.json
docs/: PARAMETER_TUNING_GUIDELINES.md  Queries.md
examples/: diagnostics_example.py  semantic_decomposition.py  smied_example.py  smied_usage.py  srl_example.py
notebooks/: NL2AMR2FRED_Tests.ipynb
tests/: HypergraphVisualization_tests.py  MetagraphUtils_tests.py  Metagraph_tests.py  PatternMatcher_tests.py  TESTS.md  TODO.md  TestHypergraphVisualizations.py  TestMetagraph.py  TestMetagraphUtils.py  TestPatternMatcher.py  TestSemanticMetagraph.py  __init__.py  hypothesis_validation_results.md  prompts.md  run_all_tests.py  test_beam_builder.py  test_comparative_analysis.py  test_diagnostics.py  test_directed_metagraph.py  test_embedding_helper.py  test_framenet_integration.py  test_framenet_spacy_srl_triple_based.py  test_gloss_parser.py  test_metavertex_pattern_matcher.py  test_optimization_demo.py  test_optimization_strategies.py  test_pairwise_bidirectional_astar.py  test_pattern_loader.py  test_regression.py  (+7 more)
(+106 files in other folders)
